<resources>
    <string name="app_name">Tiny To-Do List</string>

    <string name="action_settings">Settings</string>
    <string name="action_backup">Backup now</string>

    <string name="task_name_hint">New task</string>
    <string name="title_activity_settings">Settings</string>
    <string name="task_edit_btn_caption">Edit task</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_feedback">Send feedback</string>

    <string name="pref_task_length_display">Default task length</string>
    <string name="pref_backup_display">Backup to Dropbox</string>
    <string name="pref_backup_default_value">None</string>

    <string-array name="pref_task_length_titles">
        <item>None</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
    </string-array>
    <string-array name="pref_task_length_values">
        <item>-1</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

    <string name="title_activity_create_task">Create task</string>
    <string name="title_activity_edit_task">Edit task</string>
    <string name="title_activity_dropbox">Login to Dropbox</string>

    <string name="editor_save">Done</string>
    <string name="editor_delete">Delete</string>
    <string name="alert_confirm_delete">Delete this task?</string>
    <string name="alert_yes">Delete</string>
    <string name="alert_no">Cancel</string>
    <string name="startTimeLabel">Starting:</string>
    <string name="endTimeLabel">Ending:</string>
    <string name="default_day_of_week">Unknown</string>
    <string name="default_date">Unknown date</string>
    <string name="context_delete_title">Delete</string>
    <plurals name="alert_confirm_multi_delete">
        <item quantity="one">Delete %1$d task?</item>
        <item quantity="other">Delete %1$d tasks?</item>
    </plurals>
    <string name="notif_action_mark_done">Done</string>

    <string name="feedback_suggestion_text">[Describe your problem/suggest changes here.]</string>

</resources>
