<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.alina.to_dolist.BasicEditor">

    <ca.alina.to_dolist.BigDatePopupButton
        android:id="@+id/bigDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/taskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/task_name_hint"
        android:inputType="text|textAutoCorrect"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bigDate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">
        <requestFocus />
    </EditText>

    <Switch
        android:id="@+id/endTimeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endTimeCompound"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeCompound"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/startTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:text="@string/startTimeLabel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/startTimeCompound"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/startTimeCompound" />

    <ca.alina.to_dolist.TimeButtonEditText
        android:id="@+id/startTimeCompound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/taskName"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/endTimeCompound" />

    <TextView
        android:id="@+id/endTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:text="@string/endTimeLabel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeCompound"
        app:layout_constraintLeft_toLeftOf="@+id/startTimeLabel" />

    <ca.alina.to_dolist.TimeButtonEditText
        android:id="@+id/endTimeCompound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/endTimeSwitch"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/startTimeCompound" />
</android.support.constraint.ConstraintLayout>
